[package]
name = "nong-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
reqwest = { version = "0.11", features = ["blocking"] }
rfd = "0.9.0"
serde_json = "1.0.96"
whoami = "1.4.0"
msgbox = "0.7"